--- a/all/modules/hso_anmeldung/html_templates/default_anmeldung_template.html
+++ b/all/modules/hso_anmeldung/html_templates/default_anmeldung_template.html
@@ -83,8 +83,7 @@
     <tr>
       <td colspan="2" width="621" valign="top">
         <p lang="de-CH" class="f-arial normal">Es freut uns sehr, dass Sie sich f&uuml;r die HSO
-        entschieden haben. Gerne best&auml;tigen wir Ihnen die Reservation f&uuml;r einen
-        Ausbildungsplatz wie folgt:</p>
+        entschieden haben! Gerne best&auml;tigen wir Ihnen ihre verbindliche Anmeldung zum folgenden Lehrgang:</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal"><b>Lehrgang</b> %ABTEILUNG% %LEHRGANG%</p>
         <p lang="de-CH" class="c1"><br /></p>
@@ -93,8 +92,7 @@
         <p lang="de-CH" class="f-arial normal"><b>Ort</b> %HSO_ADRESSE%, %HSO_PLZORT%</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Bitte unterschreiben Sie den beiliegenden
-        Ausbildungsvertrag und senden ihn an die HSO zur&uuml;ck. Erst danach ist Ihr
-        Ausbildungsvertrag mit der HSO rechtsg&uuml;ltig.</p>
+        Ausbildungsvertrag und senden ihn an die HSO zur&uuml;ck, damit Ihr Ausbildungsvertrag mit der HSO rechtsg&uuml;ltig wird.</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Den Ferien- und Stundenplan, sowie die entsprechende
         Rechnung erhalten Sie ca. 2 Wochen vor dem Schulbeginn. Das Schulmaterial wird
@@ -106,6 +104,7 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Freundliche Gr&uuml;sse</p>
+          <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">HSO Wirtschaftsschule Schweiz AG</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
