- Anmelde Templates ergänzt (HBS, BVS) inkl. Logos - Bestätigungsseite ergänzt (Texte)

--- a/all/modules/hso_anmeldung/html_templates/default_anmeldung_template_hmz.html
+++ b/all/modules/hso_anmeldung/html_templates/default_anmeldung_template_hmz.html
@@ -82,7 +82,7 @@
     </tr>
     <tr>
       <td colspan="2" width="621" valign="top">
-        <p lang="de-CH" class="f-arial normal">Es freut uns sehr, dass Sie sich f&uuml;r die HSO
+        <p lang="de-CH" class="f-arial normal">Es freut uns sehr, dass Sie sich f&uuml;r die HMZ
         entschieden haben! Gerne best&auml;tigen wir Ihnen ihre verbindliche Anmeldung zum folgenden Lehrgang:</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal"><b>Lehrgang</b> %ABTEILUNG% %LEHRGANG%</p>
@@ -154,6 +154,10 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Kosten exkl. Ratenzahlungszuschlag und exkl. Einschreibegeb&uuml;hr:</span></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">%DETAILEDCOSTS%</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
+        <p lang="de-CH" class="f-arial-justify"><span class="small">Bitte senden Sie uns das ausgef&uuml;llte
+        Personalienblatt mit Ihrer Wohnsitzbest&auml;tigung f&uuml;r die Beantragung der Kantonsbeitr&auml;ge (FSV/HFSV)
+        zusammen mit dem unterschriebenen Ausbildungsvertrag zu.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der/die Unterzeichnende best&auml;tigt,
         von den Bedingungen der Brosch&uuml;re HMZ %ABTEILUNG% Kenntnis genommen zu haben
