--- a/all/modules/hso_anmeldung/html_templates/default_anmeldung_template_hbs.html
+++ b/all/modules/hso_anmeldung/html_templates/default_anmeldung_template_hbs.html
@@ -13,7 +13,7 @@
   <style type="text/css">
     @page { margin-right: 25mm; margin-top: 25mm; margin-bottom: 20mm}
     body.c20 {border: none; padding: 0}
-    table.break-before {page-break-before: always} 
+    table.break-before {page-break-before: always}
     p.border-bottom {border-bottom: 1px solid #000000; border-left: none; border-right: none; border-top: none; margin-bottom: 0; padding-bottom: 0.01in; padding-left: 0; padding-right: 0; padding-top: 0}
     p { margin-bottom: 0; line-height: 115%; text-align: left}
     p.c1 {margin: 0; padding: 0}
@@ -60,19 +60,19 @@
         <p lang="de-CH" class="f-arial"><span class="normal">Z&uuml;rich, %DATUM%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-arial"><span class="normal-bold">Herzlich Willkommen an der HSO Wirtschaftsschule!</span></p>
+        <p lang="de-CH" class="f-arial"><span class="normal-bold">Herzlich Willkommen an der H.B.S. Schulen!</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="normal">%GRUSSFORMEL%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
       </td>
       <td width="207">
-        <p lang="de-CH" class="f-arial"><span class="small">HSO Wirtschaftsschule Schweiz AG</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small">H.B.S. Schulen</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">%HSO_ADRESSE%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">%HSO_PLZORT%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">Telefon %HSO_TEL%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">Fax %HSO_FAX%</span></p>
-        <p lang="de-CH" class="f-arial"><span class="small">hso.ch</span></p>
+        <p lang="de-CH" class="f-arial"><span class="small">hbs.ch</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="small">%KONTAKTPERSON%</span></p>
         <p lang="de-CH" class="f-arial"><span class="small">Direkt %KONTAKTTEL%</span></p>
@@ -82,7 +82,7 @@
     </tr>
     <tr>
       <td colspan="2" width="621" valign="top">
-        <p lang="de-CH" class="f-arial normal">Es freut uns sehr, dass Sie sich f&uuml;r die HSO
+        <p lang="de-CH" class="f-arial normal">Es freut uns sehr, dass Sie sich f&uuml;r die H.B.S.
         entschieden haben! Gerne best&auml;tigen wir Ihnen ihre verbindliche Anmeldung zum folgenden Lehrgang:</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal"><b>Lehrgang</b> %ABTEILUNG% %LEHRGANG%</p>
@@ -92,7 +92,7 @@
         <p lang="de-CH" class="f-arial normal"><b>Ort</b> %HSO_ADRESSE%, %HSO_PLZORT%</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Bitte unterschreiben Sie den beiliegenden
-        Ausbildungsvertrag und senden ihn an die HSO zur&uuml;ck, damit Ihr Ausbildungsvertrag mit der HSO rechtsg&uuml;ltig wird.</p>
+        Ausbildungsvertrag und senden ihn an die H.B.S. zur&uuml;ck, damit Ihr Ausbildungsvertrag mit der H.B.S. rechtsg&uuml;ltig wird.</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Den Ferien- und Stundenplan, sowie die entsprechende
         Rechnung erhalten Sie ca. 2 Wochen vor dem Schulbeginn. Das Schulmaterial wird
@@ -105,7 +105,7 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial normal">Freundliche Gr&uuml;sse</p>
           <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-arial normal">HSO Wirtschaftsschule Schweiz AG</p>
+        <p lang="de-CH" class="f-arial normal">H.B.S. Schulen</p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
       </td>
@@ -125,7 +125,7 @@
     </tr>
     <tr>
       <td colspan="3" width="649" valign="top">
-        <p class="border-bottom"><span class="f-verdana-bold">Ausbildungsvertrag HSO</span></p>
+        <p class="border-bottom"><span class="f-verdana-bold">Ausbildungsvertrag H.B.S.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-courier"><span class="small-bold">Abteilung:</span> <span class="small">%ABTEILUNG%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small-bold">Lehrgang:</span> <span class="small">%LEHRGANG%</span></p>
@@ -160,7 +160,7 @@
         zusammen mit dem unterschriebenen Ausbildungsvertrag zu.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der/die Unterzeichnende best&auml;tigt,
-        von den Bedingungen der Brosch&uuml;re HSO %ABTEILUNG% Kenntnis genommen zu haben
+        von den Bedingungen der Brosch&uuml;re H.B.S. %ABTEILUNG% Kenntnis genommen zu haben
         und erkl&auml;rt sich damit einverstanden. Gerichtsstand ist Z&uuml;rich. Diese
         Anmeldung kann frei von jeder Verpflichtung innert 5 Tagen nach Unterzeichnung
         ohne Grundangabe seitens des/der Studierenden und Schule annulliert werden. Der
@@ -169,10 +169,11 @@
         Klassenliste) ver&ouml;ffentlicht werden.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der Eingang der Anmeldung wird von der
-        HSO r&uuml;ckbest&auml;tigt und das Schulgeld in Rechnung gestellt. Es bleibt der
+        H.B.S. r&uuml;ckbest&auml;tigt und das Schulgeld in Rechnung gestellt. Es bleibt der
         Schule vorbehalten, den Ausbildungslehrgang bei zu wenigen Anmeldungen und gegen
         vollst&auml;ndige R&uuml;ckerstattung aller eingezahlten Schulgelder - nicht
         durchzuf&uuml;hren.</span></p>
+        <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small"><b>Bei Minderj&auml;hrigen</b>
         zus&auml;tzlich Unterschrift der Eltern bzw. des gesetzlichen Vertreters Name,
         Vorname, Adresse und PLZ/Ort der/des Erziehungsberechtigten.</span></p>
@@ -188,12 +189,14 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">Bitte unterschrieben retournieren
         an:</span></p>
-        <p lang="de-CH" class="f-arial"><span class="smaller">HSO Wirtschaftsschule Schweiz AG</span></p>
+        <p lang="de-CH" class="f-arial"><span class="smaller">H.B.S. Schulen</span></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">%HSO_ADRESSE%</span></p>
         <p lang="de-CH" class="f-arial"><span class="smaller">%HSO_PLZORT%</span></p>
       </td>
       <td colspan="2" width="320">
         <p lang="de-CH" class="c1"><br /></p>
+        <p lang="de-CH" class="f-arial"><span class="smaller">Oder per Fax an:</span></p>
+        <p lang="de-CH" class="f-arial"><span class="smaller">%HSO_FAX%</span></p>
       </td>
     </tr>
   </table>
