--- a/all/modules/hso_anmeldung/html_templates/default_anmeldung_template.html
+++ b/all/modules/hso_anmeldung/html_templates/default_anmeldung_template.html
@@ -161,10 +161,11 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der/die Unterzeichnende best&auml;tigt,
         von den Bedingungen der Brosch&uuml;re HSO %ABTEILUNG% Kenntnis genommen zu haben
-        und erkl&auml;rt sich damit einverstanden. Gerichtsstand ist Z&uuml;rich. Diese
-        Anmeldung kann frei von jeder Verpflichtung innert 5 Tagen nach Unterzeichnung
-        ohne Grundangabe seitens des/der Studierenden und Schule annulliert werden. Der
-        R&uuml;cktritt muss mit eingeschriebenem Brief erfolgen. Adressangaben der/des
+        und erkl&auml;rt sich damit einverstanden. Gerichtsstand ist, soweit gesetzlich zul&auml;ssig, ausschliesslich Z&uuml;rich. Diese
+        Anmeldung kann frei von jeder Verpflichtung innert 5 Tagen nach Unterzeichnung ohne Grundangabe seitens des/der Studierenden und
+        Schule annulliert werden. Die Frist betr&auml;gt f&uuml;nf Tage und beginnt f&uuml;r den / die Studierende(n)
+        mit der Unterzeichnung des Vertrags und f&uuml;r die HSO Wirtschaftsschule Schweiz AG mit erfolgter Zustellung des Vertrags (Posteingangsstempel).
+        Der R&uuml;cktritt muss mit eingeschriebenem Brief erfolgen. Adressangaben der/des
         Unterzeichnenden d&uuml;rfen im Rahmen der Schulorganisation (z.B. als
         Klassenliste) ver&ouml;ffentlicht werden.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
@@ -174,8 +175,8 @@
         vollst&auml;ndige R&uuml;ckerstattung aller eingezahlten Schulgelder - nicht
         durchzuf&uuml;hren.</span></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small"><b>Bei Minderj&auml;hrigen</b>
-        zus&auml;tzlich Unterschrift der Eltern bzw. des gesetzlichen Vertreters Name,
-        Vorname, Adresse und PLZ/Ort der/des Erziehungsberechtigten.</span></p>
+        zus&auml;tzlich Unterschrift der Eltern bzw. des gesetzlichen Vertreters (Name,
+        Vorname, Adresse und PLZ/Ort der/des Erziehungsberechtigten angeben).</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
