--- a/all/modules/hso_anmeldung/html_templates/default_anmeldung_template_hmz.html
+++ b/all/modules/hso_anmeldung/html_templates/default_anmeldung_template_hmz.html
@@ -174,8 +174,8 @@
         vollst&auml;ndige R&uuml;ckerstattung aller eingezahlten Schulgelder - nicht
         durchzuf&uuml;hren.</span></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small"><b>Bei Minderj&auml;hrigen</b>
-        zus&auml;tzlich Unterschrift der Eltern bzw. des gesetzlichen Vertreters Name,
-        Vorname, Adresse und PLZ/Ort der/des Erziehungsberechtigten.</span></p>
+        zus&auml;tzlich Unterschrift der Eltern bzw. des gesetzlichen Vertreters (Name,
+        Vorname, Adresse und PLZ/Ort der/des Erziehungsberechtigten angeben).</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="c1"><br /></p>
