- contract templates corrected (FSV removed, geburtsort added) - db updated

--- a/all/modules/hso_anmeldung/html_templates/default_anmeldung_template.html
+++ b/all/modules/hso_anmeldung/html_templates/default_anmeldung_template.html
@@ -145,6 +145,7 @@
         <p lang="de-CH" class="f-courier"><span class="small">Tel Mobile: %TELM%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Email: %EMAIL%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Geburtsdatum: %GEBDATE%</span></p>
+        <p lang="de-CH" class="f-courier"><span class="small">Geburtsort: %GEBURTSORT%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">AHV Nummer: %AHV%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Beruf: %BERUF%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Ausbildung: %AUSBILDUNG%</span></p>
@@ -154,10 +155,6 @@
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Kosten exkl. Ratenzahlungszuschlag und exkl. Einschreibegeb&uuml;hr:</span></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">%DETAILEDCOSTS%</span></p>
-        <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-arial-justify"><span class="small">Bitte senden Sie uns das ausgef&uuml;llte
-        Personalienblatt mit Ihrer Wohnsitzbest&auml;tigung f&uuml;r die Beantragung der Kantonsbeitr&auml;ge (FSV/HFSV)
-        zusammen mit dem unterschriebenen Ausbildungsvertrag zu.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der/die Unterzeichnende best&auml;tigt,
         von den Bedingungen der Brosch&uuml;re HSO %ABTEILUNG% Kenntnis genommen zu haben
