--- a/all/modules/hso_anmeldung/html_templates/default_anmeldung_template_hbs.html
+++ b/all/modules/hso_anmeldung/html_templates/default_anmeldung_template_hbs.html
@@ -145,6 +145,7 @@
         <p lang="de-CH" class="f-courier"><span class="small">Tel Mobile: %TELM%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Email: %EMAIL%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Geburtsdatum: %GEBDATE%</span></p>
+        <p lang="de-CH" class="f-courier"><span class="small">Geburtsort: %GEBURTSORT%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">AHV Nummer: %AHV%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Beruf: %BERUF%</span></p>
         <p lang="de-CH" class="f-courier"><span class="small">Ausbildung: %AUSBILDUNG%</span></p>
@@ -155,16 +156,13 @@
         <p lang="de-CH" class="f-arial-justify"><span class="small">Kosten exkl. Ratenzahlungszuschlag und exkl. Einschreibegeb&uuml;hr:</span></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">%DETAILEDCOSTS%</span></p>
         <p lang="de-CH" class="c1"><br /></p>
-        <p lang="de-CH" class="f-arial-justify"><span class="small">Bitte senden Sie uns das ausgef&uuml;llte
-        Personalienblatt mit Ihrer Wohnsitzbest&auml;tigung f&uuml;r die Beantragung der Kantonsbeitr&auml;ge (FSV/HFSV)
-        zusammen mit dem unterschriebenen Ausbildungsvertrag zu.</span></p>
-        <p lang="de-CH" class="c1"><br /></p>
         <p lang="de-CH" class="f-arial-justify"><span class="small">Der/die Unterzeichnende best&auml;tigt,
         von den Bedingungen der Brosch&uuml;re H.B.S. %ABTEILUNG% Kenntnis genommen zu haben
-        und erkl&auml;rt sich damit einverstanden. Gerichtsstand ist Z&uuml;rich. Diese
-        Anmeldung kann frei von jeder Verpflichtung innert 5 Tagen nach Unterzeichnung
-        ohne Grundangabe seitens des/der Studierenden und Schule annulliert werden. Der
-        R&uuml;cktritt muss mit eingeschriebenem Brief erfolgen. Adressangaben der/des
+        und erkl&auml;rt sich damit einverstanden. Gerichtsstand ist, soweit gesetzlich zul&auml;ssig, ausschliesslich Z&uuml;rich. Diese
+        Anmeldung kann frei von jeder Verpflichtung innert 5 Tagen nach Unterzeichnung ohne Grundangabe seitens des/der Studierenden und
+        Schule annulliert werden. Die Frist betr&auml;gt f&uuml;nf Tage und beginnt f&uuml;r den / die Studierende(n)
+        mit der Unterzeichnung des Vertrags und f&uuml;r die H.B.S. mit erfolgter Zustellung des Vertrags (Posteingangsstempel).
+        Der R&uuml;cktritt muss mit eingeschriebenem Brief erfolgen. Adressangaben der/des
         Unterzeichnenden d&uuml;rfen im Rahmen der Schulorganisation (z.B. als
         Klassenliste) ver&ouml;ffentlicht werden.</span></p>
         <p lang="de-CH" class="c1"><br /></p>
